# Deep-change-point-detection

./: README.md  pyproject.toml  setup.cfg
notebooks/: algo.ipynb
src/deepcpd/: __init__.py  _loss.py  inference.py  loss.py  loss_jax.py  loss_torch.py  utils.py
