[metadata]
name = deepcpd
version = 0.1
author = Charles

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    jax
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov

[build_ext]
inplace=1